adds folders for in tutorial practice

--- a/page1.html
+++ b/page1.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <h1>I love</h1>
@@ -31,6 +33,9 @@
   <li>guxeuyfgdue7776</li>
 </ul>
 
+<ol></ol>
+<ul></ul>
+
 <ol>
   <li>content</li>
   <li>eduie</li>
@@ -49,6 +54,15 @@
 </ol>
 
   <h6></h6>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut illum ea, quis beatae neque est iure itaque quibusdam quidem in quisquam molestiae. Architecto perferendis quidem eos deleniti reiciendis rerum, repellat.</p>
+
+<a href="http://www.google.com">go to google</a>
+<a href="http://www.google.com" target="_blank">go to google in new tab</a>
+<a href="http://www.lucatroise.com" target="_blank">Go to luca in new tab</a>
+<a href="http://www.lucatroise.com">go to luca</a>
+
+<div class="happiness">again</div>
+
+<p class="happiness">again</p>
+
 </body>
 </html>
